Add bot to script. Update README.md.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ DVMN_API_TOKEN=
 DVMN_API_URL=https://dvmn.org
 DVMN_API_URI_REVIEWS=/api/user_reviews/
 DVMN_API_URI_REVIEWS_LONG_POLLING=/api/long_polling/
-TIMEOUT=90
+TIMEOUT=10
 RETRY_COUNT=5
 STATUS_FORCE_LIST=429,500,502,503,504
 ALLOWED_METHODS=HEAD,GET,OPTIONS
+TG_BOT_TOKEN=
+TG_CHAT_ID=
