--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]
 python = "^3.8"
 requests = "^2.28.1"
 pydantic = {extras = ["dotenv"], version = "^1.9.1"}
+python-telegram-bot = "13.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
